# comicmanager

./: .gitignore  DEVELOPMENT_HISTORY.md  LICENSE  PKG-INFO  README.md  build.py  comicmanager_neo.spec  config.yaml  pyproject.toml
comicmanager/: __init__.py  main.py
comicmanager/core/: __init__.py  cbz_merger.py  config.py  file_utils.py  file_utils_temp.py  zip_extractor.py  zip_extractor.py.bak
comicmanager/gui/: __init__.py  drag_drop_handler.py  file_list_widget.py  format_selector.py  main_window.py  settings.py
comicmanager/tests/: __init__.py  test_merger.py  test_zip_extractor.py
comicmanager/utils/: __init__.py  validators.py
docs/: PRD-2026-03-29.md  PRD-zh-2026-03-29.md  drug_drop-2025-03-29.md
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: browse.ts  client.ts  files.ts  merge.ts  settings.ts  webview_bridge.ts
frontend/src/components/: FileDropZone.vue  FileList.vue  FileRow.vue  FormatSelector.vue  MergeControls.vue  OutputSettings.vue  SettingsModal.vue  StatsBar.vue  ToastContainer.vue  Toolbar.vue
frontend/src/composables/: useFileDrop.ts  useFileQueue.ts  useKeyboard.ts  useMerge.ts  useSettings.ts  useTheme.ts  useToast.ts
frontend/src/styles/: main.css
frontend/src/types/: index.ts
src/: __init__.py  js_api.py  main.py  server.py
src/core/: config.py  constants.py  state.py
src/models/: files.py  progress.py  settings.py
src/routes/: browse.py  files.py  formats.py  health.py  merge.py  settings.py
src/services/: extractor.py  file_info.py  merger.py  validator.py
src/tasks/: merge_task.py
