[project]
name = "comicmanager-neo"
version = "1.0.0"
description = "CBZ/ZIP comic file merger with modern web UI"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pywebview>=6.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.18",
    "sse-starlette>=2.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
